--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://iosevka-webfonts.github.io/iosevka/iosevka.css"
+            rel="stylesheet"
+        />
         <title>russell</title>
     </head>
     <body>
